--- a/aws_ec2.yml
+++ b/aws_ec2.yml
@@ -1,13 +1,9 @@
 plugin: aws_ec2
 regions:
-  - us-west-1
+  - ca-central-1
 keyed_groups:
   - prefix: ""
     key: tags.Name
-  - prefix: ""
-    key: tags.ops
-  - prefix: ""
-    key: tags.dev
 filters:
   instance-state-name: running
 compose:
